added header, footer, main and css formatting

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <title>My Photos</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
+        <header>
+            A Sample of Photographs
+        </header>
+        <div class="main">
 
-
+        </div>
+        <carousel>
+            
+        </carousel>
+        <footer>Built by
+            <a class="footer-link" href="https://github.com/BadTartin/" target="_blank">BadTartin</a> 
+            |
+            <a class="footer-link" href="https://github.com/BadTartin/my-photo-site"  target="_blank">Source</a> 
+        </footer>
     </body>
 </html>
