added sample photos, img tag and css styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             A Sample of Photographs
         </header>
         <div class="main">
-
+            <img src="photos/Dec 31 2022 6.3 1-200s  1250 141.jpg">
         </div>
         <carousel>
             
