--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
             A Sample of Photographs
         </header>
         <div class="main">
+            <div class="imgcontainer">
             <img src="photos/Dec 31 2022 6.3 1-200s  1250 141.jpg">
+            </div>
+            <!-- <img src="photos/Dec 31 2022 10 1-400s  800 126.jpg"> -->
         </div>
         <carousel>
             
@@ -21,5 +24,6 @@
             |
             <a class="footer-link" href="https://github.com/BadTartin/my-photo-site"  target="_blank">Source</a> 
         </footer>
+        <script src="myscripts.js"></script> 
     </body>
 </html>
