--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             </div>
         </div>
         <carousel>
-            
+            <img src="photos/Dec 31 2022 6.3 1-200s  1250 141.jpg">
+            <img src="photos/Dec 31 2022 10 1-400s  800 126.jpg">
         </carousel>
         <footer>Built by
             <a class="footer-link" href="https://github.com/BadTartin/" target="_blank">BadTartin</a> 
