added new photo added functionality to pick main image by clicking on carousel images

--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
         <div class="main">
             <div class="imgcontainer">
             <!-- <img src="photos/Dec 31 2022 6.3 1-200s  1250 141.jpg"> -->
-            <img src="photos/Dec 31 2022 10 1-400s  800 126.jpg">
+            <img id="display" src="photos/Dec 31 2022 10 1-400s  800 126.jpg">
             </div>
         </div>
         <carousel>
             <img class="mini" src="photos/Dec 31 2022 6.3 1-200s  1250 141.jpg">
             <img class="mini" src="photos/Dec 31 2022 10 1-400s  800 126.jpg">
             <img class="mini" src="photos/Aug 20 2022 8 1-1600s  200 093.jpg">
+            <img class="mini" src="photos/Jun 17 2022 5.6 1-400s  800 046.jpg">
         </carousel>
         <footer>Built by
             <a class="footer-link" href="https://github.com/BadTartin/" target="_blank">BadTartin</a> 
