added html and css to make header font josefin sans added new photo to directory

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Josefin Sans">
+
         <title>My Photos</title>
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -20,6 +23,7 @@
             <img class="mini" src="photos/Dec 31 2022 10 1-400s  800 126.jpg">
             <img class="mini" src="photos/Aug 20 2022 8 1-1600s  200 093.jpg">
             <img class="mini" src="photos/Jun 17 2022 5.6 1-400s  800 046.jpg">
+            <img class="mini" src="photos/OrangeBreastedSunbird.jpg">
         </carousel>
         <footer>Built by
             <a class="footer-link" href="https://github.com/BadTartin/" target="_blank">BadTartin</a> 
