refactored all files to try different approach wrapper and gallery divs added img and .wrapper css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,33 @@
         <header>
             A Sample of Photographs
         </header>
-        <div class="main">
+        <div class="wrapper">
+            <nav class="lil-nav">
+                <a href="#image-1">
+                    <img class="lil-nav_img" src="photos/Dec 31 2022 6.3 1-200s  1250 141.jpg" alt="Northern Cardinal"/>
+                </a>
+                <a href="#image-2">
+                    <img class="lil-nav_img" src="photos/Dec 31 2022 10 1-400s  800 126.jpg" alt="Mute Swan"/>
+                </a>
+                <a href="#image-3">
+                    <img class="lil-nav_img" src="photos/Aug 20 2022 8 1-1600s  200 093.jpg" alt="Double Crested Cormorant"/>
+                </a>
+                <a href="#image-4">
+                    <img class="lil-nav_img" src="photos/Jun 17 2022 5.6 1-400s  800 046.jpg" alt="Common Yellow Throat"/>
+                </a>
+                <a href="#image-5">
+                    <img class="lil-nav_img" src="photos/OrangeBreastedSunbird.jpg" alt="Orange Breasted Sunbird"/>
+                </a>
+            </nav>
+            <div class="gallery">
+                <img class="gallery_img" id="image-1" src="photos/Dec 31 2022 6.3 1-200s  1250 141.jpg" alt="Northern Cardinal"/>
+                <img class="gallery_img" id="image-2" src="photos/Dec 31 2022 10 1-400s  800 126.jpg" alt="Mute Swan"/>
+                <img class="gallery_img" id="image-3" src="photos/Aug 20 2022 8 1-1600s  200 093.jpg" alt="Double Crested Cormorant"/>
+                <img class="gallery_img" id="image-4" src="photos/Jun 17 2022 5.6 1-400s  800 046.jpg" alt="Common Yellow Throat"/>
+                <img class="gallery_img" id="image-5" src="photos/OrangeBreastedSunbird.jpg" alt="Orange Breasted Sunbird"/>
+            </div>
+        </div>
+        <!-- <div class="main">
             <div class="imgcontainer">
             <img id="display" src="photos/Dec 31 2022 10 1-400s  800 126.jpg">
             </div>
@@ -24,7 +50,7 @@
             <img class="mini" src="photos/Aug 20 2022 8 1-1600s  200 093.jpg">
             <img class="mini" src="photos/Jun 17 2022 5.6 1-400s  800 046.jpg">
             <img class="mini" src="photos/OrangeBreastedSunbird.jpg">
-        </carousel>
+        </carousel> -->
         <footer>Built by
             <a class="footer-link" href="https://github.com/BadTartin/" target="_blank">BadTartin</a> 
             |
@@ -33,3 +59,8 @@
         <script src="myscripts.js"></script> 
     </body>
 </html>
+
+<div class="wrapper">
+    <nav class="lil-nav"></nav>
+    <div class="gallery"></div>
+  </div>
